Apply plugins from version catalogs